# Mug

./: .gitignore  CMakeLists.txt  MUG_FILE_FORMAT.md  PARSER.md  README.md  TODO  TOKENS.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Makefile  compiler.c  lexer.c  main.c  token.h
src/binary_data/native/global/: binary_encoder.h  buffer.h  tag.h
src/binary_data/native/windows/: binary_encoder.c  buffer.c  tag.c
src/bsd/: binary_data.c  binary_data.h  buffer.c  buffer.h  tag.h
src/compiler/native/global/: token.h
src/compiler/native/windows/: token.c
src/language/: list.h
src/language/mug/: foundation.str  object.str
src/language/native/global/: block.h  body.h  builder.h  environment.h  expression.h  field.h  foundation.h  generic.h  method.h  number.h  object.h  primitive.h  storage.h  structure.h  type.h
src/language/native/shared/: builder.c  type.h
src/language/native/windows/: block.c  body.c  builder.c  environment.c  expression.c  field.c  foundation.c  generic.c  method.c  number.c  object.c  primitive.c  storage.c  structure.c
src/logger/native/global/: logger.h
src/logger/native/windows/: logger.c
src/machine/native/global/: machine.h
src/machine/native/windows/: machine.c
src/parser/native/global/: parser.h
src/parser/native/windows/: parser.c
src/tst/: list_test.c  program.str  token.mug
src/util/native/global/: conversion.c  conversion.h  osutil.c  osutil.h  pattern.h  utilities.h
src/util/native/shared/: osutil.c
src/util/native/windows/: conversion.c  osutil.c  pattern.c  utilities.c
